@@ -1,3 +1,5 @@
+- Bug fix: Change Method isPhotoAvailableToPerson of Person to return always true 
+
 40.7.0 (28-02-2023)
 - Refactor: New entities CourseLoadType and CourseLoadDuration
 - Refactor: Add first/last execution interval finders by calendar
